--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Core\Areas\Demo.Fluentsecurity\packages.config" />
+  <repository path="..\Core\Areas\CleaningUpController\packages.config" />
   <repository path="..\Core\Areas\FluentsecurityDemo\packages.config" />
   <repository path="..\Core\Areas\Forum\packages.config" />
+  <repository path="..\Core\Areas\MvcDemos\packages.config" />
   <repository path="..\Core\packages.config" />
 </repositories>
