WIP: unit testing HtmlEnumHelper

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Core\Areas\FluentsecurityDemo\packages.config" />
   <repository path="..\Core\Areas\MvcDemos\packages.config" />
   <repository path="..\Core\packages.config" />
+  <repository path="..\UnitTests\packages.config" />
 </repositories>
