--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
+  <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
   <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
