* FluentSecurity updated to version 2. * unit testing added for FluentSecurity

--- a/Core/Areas/FluentsecurityDemo/FluentsecurityDemo.csproj
+++ b/Core/Areas/FluentsecurityDemo/FluentsecurityDemo.csproj
@@ -41,8 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentSecurity">
-      <HintPath>..\..\..\packages\FluentSecurity.1.4.0\lib\FluentSecurity.dll</HintPath>
+    <Reference Include="FluentSecurity, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\FluentSecurity.2.0.0\lib\net40\FluentSecurity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data.Entity" />
@@ -100,6 +101,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
