--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
   <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
+  <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
+  <package id="FluentSecurity.TestHelper" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
