--- a/packages/FluentSecurity.2.0.0/FluentSecurity.2.0.0.nuspec
+++ b/packages/FluentSecurity.2.0.0/FluentSecurity.2.0.0.nuspec
@@ -2,16 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>FluentSecurity</id>
-    <version>1.4.0</version>
-    <title>FluentSecurity</title>
+    <version>2.0.0</version>
     <authors>Kristoffer Ahl</authors>
     <owners>Kristoffer Ahl</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
-    <projectUrl>https://github.com/kristofferahl/FluentSecurity</projectUrl>
-    <iconUrl>https://nugetgallery.blob.core.windows.net/icons/FluentSecurity.1.4.0.png</iconUrl>
+    <projectUrl>http://www.fluentsecurity.net/</projectUrl>
+    <iconUrl>https://github.com/kristofferahl/FluentSecurity/raw/master/Documents/Fluent-Security-Logo-128x128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Fluent security configuration for ASP.NET MVC</description>
-    <summary>Fluent security configuration for ASP.NET MVC</summary>
     <tags>asp.net mvc .net40 security</tags>
   </metadata>
 </package>
