--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -104,7 +104,16 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\src\FluentsecurityDemo\FluentsecurityDemo.csproj">
+      <Project>{750d4875-8d57-41b7-ac21-58c7a27ce284}</Project>
+      <Name>FluentsecurityDemo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\MvcDemos\MvcDemos.csproj">
+      <Project>{1fb62063-d359-420f-9c5a-a4e7a46ab1a3}</Project>
+      <Name>MvcDemos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
