--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net40" />
+  <package id="GenericRepository" version="0.3.1-pre01" targetFramework="net40" />
+  <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net40" />
+  <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
