--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Core\packages.config" />
   <repository path="..\IntegrationTests\packages.config" />
   <repository path="..\My.Framework\packages.config" />
   <repository path="..\src\FluentsecurityDemo\packages.config" />
