--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Core\packages.config" />
-  <repository path="..\IntegrationTests\packages.config" />
   <repository path="..\My.Framework\packages.config" />
+  <repository path="..\src\Core\packages.config" />
   <repository path="..\src\FluentsecurityDemo\packages.config" />
+  <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
-  <repository path="..\UnitTests\packages.config" />
+  <repository path="..\src\UnitTests\packages.config" />
 </repositories>
