--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -125,6 +125,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{031ED841-BF0D-46D0-B56F-114E64C0E9B0}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FluentsecurityDemo\FluentsecurityDemo.csproj">
       <Project>{750d4875-8d57-41b7-ac21-58c7a27ce284}</Project>
       <Name>FluentsecurityDemo</Name>
