--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\src\FluentsecurityDemo\packages.config" />
   <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
+  <repository path="..\src\My.Repository.EF\packages.config" />
   <repository path="..\src\UnitTests\packages.config" />
 </repositories>
