--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -18,6 +18,9 @@
     <add key="SecurityGuardEmailFrom" value="info@email.net" />
     <add key="SecurityGuardEmailSubject" value="Your Password has been reset." />
     <add key="SecurityGuardEmailTemplatePath" value="~/MailerTemplates/ResetPassword.html" />
+    <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="MvcDemos" />
+    <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
+    <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -29,6 +32,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="MvcSiteMapProvider.Web.Html" />
+        <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
     <authentication mode="Forms">
@@ -36,24 +41,17 @@
     </authentication>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
-        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication"
-          name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication" name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </profile>
     <membership defaultProvider="DefaultMembershipProvider">
       <providers>
-        <add connectionStringName="MembershipConnection" enablePasswordRetrieval="false"
-          enablePasswordReset="true" requiresQuestionAndAnswer="false"
-          requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6"
-          minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-          applicationName="MyCoolApplication" name="DefaultMembershipProvider"
-          type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add connectionStringName="MembershipConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="MyCoolApplication" name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </membership>
     <roleManager enabled="true" defaultProvider="DefaultRoleProvider">
       <providers>
-        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication"
-          name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication" name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </roleManager>
     <!--
@@ -64,14 +62,16 @@
       -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication"
-          name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication" name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </sessionState>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="UrlRoutingModule-4.0" />
+      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -108,11 +108,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-MvcDemos-20131116202707;Integrated Security=SSPI"
-      providerName="System.Data.SqlClient" />
-    <add name="MyCoolEntities" connectionString="metadata=res://*/MyCoolEntities.csdl|res://*/MyCoolEntities.ssdl|res://*/MyCoolEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="MembershipConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-MvcDemos-20131116202707;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="MyCoolEntities" connectionString="metadata=res://*/MyCoolEntities.csdl|res://*/MyCoolEntities.ssdl|res://*/MyCoolEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MembershipConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
