--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -27,10 +27,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MvcInstaller.MVC4" version="1.1.1.1" targetFramework="net40" />
   <package id="MvcMailer" version="4.0" targetFramework="net40" />
+  <package id="MvcSiteMapProvider.MVC4" version="4.4.5" targetFramework="net40" />
+  <package id="MvcSiteMapProvider.MVC4.Core" version="4.4.5" targetFramework="net40" />
+  <package id="MvcSiteMapProvider.Web" version="4.4.5" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
