--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net40" requireReinstallation="True" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net40" />
@@ -24,12 +24,12 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" requireReinstallation="True" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MvcInstaller.MVC4" version="1.1.1.1" targetFramework="net40" />
   <package id="MvcMailer" version="4.0" targetFramework="net40" />
   <package id="MvcSiteMapProvider.MVC4" version="4.4.5" targetFramework="net40" />
-  <package id="MvcSiteMapProvider.MVC4.Core" version="4.4.5" targetFramework="net40" />
+  <package id="MvcSiteMapProvider.MVC4.Core" version="4.4.5" targetFramework="net40" requireReinstallation="True" />
   <package id="MvcSiteMapProvider.Web" version="4.4.5" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
