--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -20,7 +20,7 @@
     <add key="SecurityGuardEmailTemplatePath" value="~/MailerTemplates/ResetPassword.html" />
     <!--<add key="MvcSiteMapProvider_DefaultSiteMapNodeVisibiltyProvider" value="MvcDemos.Helpers.MvcSiteMap.ReviumVisibilityProvider, MvcDemos"/>-->
     <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="MvcDemos" />
-    <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
+    <add key="MvcSiteMapProvider_UseExternalDIContainer" value="true" />
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
   <!--
