--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" requireReinstallation="True" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
@@ -30,12 +31,15 @@
   <package id="MvcMailer" version="4.0" targetFramework="net40" />
   <package id="MvcSiteMapProvider.MVC4" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC4.Core" version="4.4.5" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC4.DI.Unity" version="4.4.5" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC4.DI.Unity.Modules" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.4.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
+  <package id="Unity" version="2.1.505.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
